kubernetes/argo-cd/projects/aws/production-hm/qdrant/environments/production/kubernetes-manifests/hm-qdrant-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-qdrant-ingress
  namespace: production-hm-qdrant
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: qdrant.hongbomiao.com
  labels:
    app.kubernetes.io/name: qdrant
    app.kubernetes.io/part-of: production-hm-qdrant
spec:
  rules:
    - host: qdrant.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-qdrant
                port:
                  number: 6333
  tls:
    - hosts:
        - qdrant.hongbomiao.com
      secretName: hm-qdrant-certificate
